# DirectX11-Level-Renderer

./: .gitignore  README.md
Assignment 1/DirectX11/: Assignment 1 DirectX 11.docx  CMakeLists.txt  main.cpp  renderer.h
Assignment 1/DirectX11/Chargualaf,Jazmine_Assignment1/: main.cpp  renderer.h
Assignment 1/DirectX11/Shaders/: PixelShader.hlsl  VertexShader.hlsl
Assignment 1/OpenGL/: Assignment 1 OpenGL.docx  CMakeLists.txt  OpenGLExtensions.h  main.cpp  renderer.h
Assignment 1/OpenGL/Shaders/: FragmentShader.glsl  VertexShader.glsl
Assignment 2/DirectX11/: Audio.h  CMakeLists.txt  Camera.h  DialogBox.h  Project Rubric.xlsx  README.txt  RenderManager.h  Wireframes.h  load_data_oriented.h  load_object_oriented.h  main.cpp  renderer.h
Assignment 2/DirectX11/Chargualaf,Jazmine_Assignment2/: main.cpp  renderer.h
Assignment 2/DirectX11/Level Renderer/: GameLevel.txt  GameLevel2.txt  House_1_Cube.fbx  Level2.blend  LevelExporter.py  LevelLoaderLog.txt  wireframe_object.fbx
Assignment 2/DirectX11/Shaders/: CameraPixelShader.hlsl  PixelShader.hlsl  VertexShader.hlsl
Assignment 2/OpenGL/: CMakeLists.txt  main.cpp
Class Utilities/: Gateware (Latest Build).url
Data Oriented Level Renderer/DirectX11/: Assignment 1 DirectX 11.docx
DirectX11 Level Renderer/DirectX11/: CMakeLists.txt  main.cpp
DirectX11 Level Renderer/DirectX11/Level Renderer/: GameLevel2.txt  LevelLoaderLog.txt
DirectX11 Level Renderer/DirectX11/Level Renderer/Models/: Barrel.h2b  Chest_Gold.h  Column_Round_Short.mtl  Crate.h  Crate.h2b  Curve_1.mtl  Doors_RoundArch.h  Flag_RoundArch.mtl  Floor_Diamond.h2b  Floor_Standard.h  House_1_Cube.mtl  House_3_Cube.mtl  House_4_Cube.mtl  Inn_Cube.mtl  Pot1.h  Pot1.h2b  Pot1_Broken.h2b  Stable_Cube.h2b  Stable_Cube.mtl  Torch_wall.h2b  Wall_ArchRound.h2b
DirectX11 Level Renderer/DirectX11/Levels/: GameLevel.txt  LevelLoaderLog.txt
DirectX11 Level Renderer/DirectX11/Levels/Models/: Blacksmith_Cube.mtl  Bookcase_Empty.h  Bookcase_Empty.h2b  Bookcase_Empty.mtl  Curve_1.h2b  Flag_RoundArch.h  Floor_Standard.h2b  House_1_Cube.h2b  House_2_Cylinder.mtl  House_3_Cube.h2b  House_4_Cube.h2b  Mill_Blades_Cube.mtl  Plane.mtl  Pot1.mtl  Pot1_Broken.h  Pot2.h2b  Pot2.mtl  Skull.mtl  Stairs.h2b  Stairs.mtl  Stairs_2.h  Stairs_2.h2b  Statue_Fox.h2b  Statue_Fox.mtl  Torch_wall.mtl  Wall.h  Wall.h2b  Wall_Double_Broken.h
DirectX11 Level Renderer/DirectX11/Source/: Audio.h  Camera.h  RenderManager.h  main.cpp
DirectX11 Level Renderer/DirectX11/Source/Utility/: h2bParser.h  load_object_oriented.h
DirectX11 Level Renderer/DirectX11/docs/: Project Rubric.xlsx
Documents/: 3DCC Syllabus.docx  Creating Your Level.docx  File Based Shaders.txt  Official Late Policy.docx  Parsing A Game Level.txt
Documents/Coding Style Advice/: Colby's Clean Coding Clinic.url  Lessons on how to code 'clean'.url  Reasons for avoiding 'clean' code.url
Level Renderer Project/: Project Rubric.xlsx  Triangulate
Level Renderer Project/Level Renderer/Assets/: Arch_Round_RoundColumn.mtl  Barrel.h  BearTrap_Open.mtl  Chest_Gold.mtl  Column_Round_Short.h2b  Floor_Standard.h2b  Pot2.h  Pot2.h2b  Trapdoor.mtl  Wall_Double_Broken.h2b
Level Renderer Project/Level Renderer/DirectX11/: Assignment 2 DirectX 11.docx  CMakeLists.txt  load_object_oriented.h  main.cpp  renderer.h
Level Renderer Project/Level Renderer/Level Renderer/: GameLevel.txt  LevelLoaderLog.txt
Level Renderer/OpenGL/: renderer.h
Level Renderer/OpenGL/Shaders/: FragmentShader.glsl  VertexShader.glsl
Mastery 1 (NOT USED)/Vulkan/: CMakeLists.txt
Mastery 1 (NOT USED)/Vulkan/Shaders/: FragmentShader.hlsl  VertexShader.hlsl
Mastery 1/Vulkan/: Mastery 1 Vulkan.docx  main.cpp  renderer.h
Mastery 2/: README.txt
Mastery 2 (NOT USED)/Vulkan/: CMakeLists.txt  renderer.h
Mastery 2/Vulkan/: Mastery 2 Vulkan.docx  main.cpp
Mastery 2/Vulkan/Shaders/: FragmentShader.hlsl  VertexShader.hlsl
My Level Renderer/Level Renderer/: LevelLoaderLog.txt
My Level Renderer/Level Renderer/Models/: Arch_Round_RoundColumn.h  Bookcase_Empty.h  Bookcase_Empty.h2b  Crate.h2b  Curve_1.h  Curve_2.h  Curve_2.mtl  Floor_Diamond.h  Floor_Diamond.mtl  Floor_Standard.mtl  Pot1.h2b  Stairs_2.h2b  Stairs_2.mtl  Statue_Fox.h2b  Wall_ArchRound.h  Wall_Double_Broken.h  Window_Bars.h2b
Slides/: API & Shader Debugging.pptx  Advanced Effects.pptx  Shading Languages.pptx
Slides/DebuggingDemos/BrokenStar_DX11/: CMakeLists.txt  main.cpp  renderer.h
Slides/DebuggingDemos/BrokenStar_DX12/: CMakeLists.txt  FileIntoString.h  main.cpp  renderer.h
Slides/DebuggingDemos/BrokenStar_OGL/: CMakeLists.txt  FileIntoString.h  OpenGLExtensions.h  README.md  (+2 more)
Staff/: README.txt
Staff/Scripts/: README.txt  TestAllProjects.ps1  TestAllProjectsAndLogOutput.cmd
Variants/: Advice.txt
Variants/Assignment 2/Vulkan/: Assignment 2 Vulkan.docx  CMakeLists.txt
Variants/Assignment 2/Vulkan/Shaders/: FragmentShader.hlsl
(+121 files in other folders)
